Preventing readability background overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,6 +32,8 @@ footer {
   background: rgba(255, 255, 255, 0.5);
   border-radius: 4em;
   padding: 40px;
+  box-sizing: border-box;
+  max-width: 100%;
 }
 
 .time-container {
